<resources>
    <string name="app_name">My Application</string>
    <string name="login">LOGIN</string>
    <string name="username">User Name</string>
    <string name="add_user">Add User</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>

    <string name="name_error_mesg">Min 3 and max 30</string>
    <string name="email_error_mesg">Enter Valid Email</string>
    <string name="loan_error_mesg">Loan amount should be less than 1000000</string>
    <string name="pan_error_mesg">Enter valid PAN number</string>
    <string name="adhaar_error_mesg">Enter valid adhaar card</string>
    <string name="voter_error_mesg">Enter valid voter ID</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pan">PAN number</string>
    <string name="adhaar">Adhaar number</string>
    <string name="voter_id">Voter ID</string>
    <string name="loan_amount">Loan amount</string>
    <string name="email">Email ID</string>

    <string name="err_mesg_50kamount">PAN  is required for amount greater than 50,000</string>
    <string name="err_mesg_3o_t0_50kamount">PAN  or Adhaar is required for amount between 30,000 to 50,000</string>
    <string name="err_mesg_below_3okamount">PAN/Adhaar/Voter Id is required for amount less than 30,000</string>
</resources>
